--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,42 @@
 version: 2.1
 
-jobs:
-  lint:
-    docker:
-      - image: cimg/python:3.11
+orbs:
+  python: circleci/python@1.2
+
+commands:
+  setup-env:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          name: Setup Python and install dependencies
           command: |
             pip install uv
             uv venv
             . .venv/bin/activate
-            uv pip install ruff mypy pytest pytest-cov
+            uv pip install --group dev
             uv pip install -e mail_api
             uv pip install -e mail_gmail_impl
             uv pip install -e tests
-      - run:
-          name: Run ruff linter
-          command: |
-            . .venv/bin/activate
-            ruff check .
-      - run:
-          name: Run type checking with mypy
-          command: |
-            . .venv/bin/activate
-            mypy mail_api/ mail_gmail_impl/ tests/
 
+jobs:
   test:
     docker:
       - image: cimg/python:3.11
     steps:
-      - checkout
+      - setup-env
       - run:
-          name: Install dependencies
+          name: Run static analysis (ruff & mypy)
           command: |
-            pip install uv
-            uv venv
             . .venv/bin/activate
-            uv pip install ruff mypy pytest pytest-cov
-            uv pip install -e mail_api
-            uv pip install -e mail_gmail_impl
-            uv pip install -e tests
+            ruff check .
+            mypy mail_api mail_gmail_impl
       - run:
           name: Run tests with coverage
           command: |
             . .venv/bin/activate
             mkdir -p test-results
-            pytest tests/src/tests/__init__.py \
-              --cov=mail_api \
-              --cov=mail_gmail_impl \
+            pytest tests/src/tests \
+              --cov=mail_api --cov=mail_gmail_impl \
               --junitxml=test-results/results.xml
             coverage report -m
             coverage html -d coverage-report
@@ -63,8 +50,6 @@ jobs:
           destination: coverage-html
 
 workflows:
-  version: 2
-  lint-and-test:
+  test-all:
     jobs:
-      - lint
       - test
