--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dev-dependencies = [
     "black>=24.8.0",
     "mypy>=1.11.2",
     "ruff>=0.6.8",
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.5.0"
 ]
 
 [tool.uv.workspace]
