--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,25 @@ orbs:
   python: circleci/python@1.2
 
 jobs:
+  static_analysis:
+    docker:
+      - image: python:3.10
+    steps:
+      - checkout
+      - run:
+        name: Install dependencies
+        command: |
+            pip install uv
+            uv venv
+            . .venv/bin/activate
+            uv pip install ruff mypy
+      - run:
+          name: Run static analysis (ruff & mypy)
+          command: |
+            . .venv/bin/activate
+            ruff check .
+            mypy src/
+
   unit_tests:
     docker:
       - image: python:3.10
@@ -19,17 +38,11 @@ jobs:
             uv pip install pytest pytest-cov mypy ruff coverage
             uv pip install -e .
       - run:
-          name: Run static analysis (ruff & mypy)
-          command: |
-            . .venv/bin/activate
-            ruff check .
-            mypy src/
-      - run:
           name: Run unit tests
           command: |
             . .venv/bin/activate
             mkdir -p test-results/unit
-            pytest src/*/tests/ --cov=src --junitxml=test-results/unit/results.xml
+            pytest src/calculator/tests/ src/logger/tests/ src/notifier/tests/ --cov=src --junitxml=test-results/unit/results.xml
             coverage report -m
             coverage html -d coverage-unit
       - store_test_results:
@@ -131,9 +144,16 @@ jobs:
 workflows:
   test_pipeline:
     jobs:
-      - unit_tests
-      - integration_tests
-      - end_to_end_tests
+      - static_analysis
+      - unit_tests:
+        requires:
+          - static_analysis
+      - integration_tests:
+        requires:
+          - static_analysis
+      - end_to_end_tests:
+        requires:
+          - static_analysis
       - coverage_report:
           requires:
             - unit_tests
