--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            pip install uv
+            curl -LsSf https://astral.sh/uv/install.sh | sh
             uv venv
             . .venv/bin/activate
             uv pip install pytest pytest-cov mypy ruff coverage
