--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ jobs:
           name: Install dependencies
           command: |
             curl -LsSf https://astral.sh/uv/install.sh | sh
+            export PATH="$HOME/.local/bin:$PATH"
             uv venv
-            . .venv/bin/activate
+            source .venv/bin/activate
             uv pip install pytest pytest-cov mypy ruff coverage
             uv pip install -e .
       - persist_to_workspace:
