--- a/mail_gmail_impl/pyproject.toml
+++ b/mail_gmail_impl/pyproject.toml
@@ -1,16 +1,18 @@
 [project]
-name = "mail-gmail-impl"
+name = "mail_gmail_impl"
 version = "0.1.0"
-description = "Add your description here"
+description = "Gmail implementation of mail_api interfaces"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "google-api-python-client>=2.146.0",
-    "google-auth-oauthlib>=1.2.1",
-    "google-auth>=2.35.0",
-    "html2text>=2024.2.26",
+    "mail_api",
+    "google-api-python-client>=2.113.0",
+    "google-auth>=2.28.1",
+    "google-auth-oauthlib>=1.2.0",
+    "google-auth-httplib2>=0.1.1",
+    "html2text>=2023.0.0",
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
