--- a/mail_gmail_impl/pyproject.toml
+++ b/mail_gmail_impl/pyproject.toml
@@ -16,3 +16,6 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.uv.sources]
+mail_api = { workspace = true }
