--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,18 @@ dev-dependencies = [
     "ruff>=0.6.8",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
-    "coverage>=7.5.0"
+    "coverage>=7.5.0",
+    "google-api-python-client>=2.125.0",
+    "google-auth>=2.29.0",
+    "google-auth-oauthlib>=1.2.0",
+    "html2text>=2020.1.16"
 ]
 
 [tool.uv.workspace]
 members = ["mail_api", "mail_gmail_impl", "tests"]
+
+[tool.pytest.ini_options]
+pythonpath = [
+    "mail_api/src",
+    "mail_gmail_impl/src"
+]
