--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dev-dependencies = [
     "ruff>=0.6.8",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
     "coverage>=7.5.0",
     "google-api-python-client>=2.125.0",
     "google-auth>=2.29.0",
